# svd-demo-ui

./: CMakeLists.txt  README.md  common.py  requirements.txt  svd_demo_pygame.py  svd_demo_reference.py  svd_demo_vispy.py  utils.py
include/: image.h  shader.h  texture.h  version.h  window.h
resources/: ui.md
src/: image.cpp  main.cpp  shader.cpp  texture.cpp  version.cpp  window.cpp
